# workspace-c-conan

./: .devcontainer.json  CMakeLists.txt  Dockerfile  README.md  conanfile.py
.devcontainer/: .zshrc  Dockerfile  agnoster.zsh-theme  devcontainer.json
src/: CMakeLists.txt  calculator.c  main.c
test/: CMakeLists.txt  calculator.cpp
